# ips-profile-report

./: .flake8  .gitignore  .isort.cfg  .releaserc.json  CHANGELOG.md  Makefile  README.md  block_progress_report.py  ips_profile_report.py  pyproject.toml  requirements.txt  setup.cfg  threat_signature_report.py
.github/: dependabot.yml  set-version.sh
.github/workflows/: ci.yml  codeql-analysis.yml  python-test.yml
panos/: objects.py  policies.py
panos_util/: __init__.py  block_report.py  objects.py  panorama.py  policies.py  threat_report.py
tests/: panorama.xml  test_panorama.py  test_security_profile_group.py  test_security_rule.py  test_vuln_profile.py  test_vuln_profile_rule.py  test_vuln_signature.py
tests/objects/: test_security_profile_group.py  test_vuln_profile.py  test_vuln_profile_rule.py  test_vuln_signature.py
tests/panorama/: test_panorama.py
tests/policies/: test_security_rule.py
